--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@leenguyen/react-flip-clock-countdown": "^1.4.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.17",
+    "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
